# bzlib

./: CHANGELOG.md  README.md  bzlib.cabal
.github/workflows/: haskell-ci.yml  other.yml
Codec/Compression/: BZip.hs
Codec/Compression/BZip/: Internal.hs  Stream.hsc
cbits/: bzlib.h
cbits-extra/: hs-bzlib.c  hs-bzlib.h
test/: Test.hs
test/Test/Codec/Compression/BZip/: Internal.hs  Stream.hs
